# POET

./: .env.example  .gitignore  README.md  pyproject.toml  requeriments.txt  requirements.txt
docker/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
docker/shell/: entrypoint.sh
docs/openapi/: spec.yaml
docs/postman/: collection.json
docs/uml/: TempatesAndMarkers.uxf
src/: main.py
src/alembic/: env.py
src/core/: settings.py
src/default_template/: Bias_Gender_YN_template.json  Bias_Religion_YN_template.json  Bias_Sexual_Exp_template.json  Trust4AI_ability_1group_EX.json  Trust4AI_ability_1group_YN.json  Trust4AI_ability_2groups_EX.json  Trust4AI_ability_2groups_MC.json  Trust4AI_ability_2groups_YN.json  Trust4AI_age_1group_EX.json  Trust4AI_age_1group_YN.json  Trust4AI_age_2groups_EX.json  Trust4AI_age_2groups_MC.json  Trust4AI_age_2groups_YN.json  Trust4AI_gender_1group_Ex.json  Trust4AI_gender_1group_YN.json  Trust4AI_gender_2group_YN.json  Trust4AI_gender_2groups_Ex.json  Trust4AI_gender_2groups_MC.json  Trust4AI_gender_2groups_YN.json  Trust4AI_physical_appearance_1group_EX.json  Trust4AI_physical_appearance_1group_YN.json  Trust4AI_physical_appearance_2groups_EX.json  Trust4AI_physical_appearance_2groups_MC.json  Trust4AI_physical_appearance_2groups_YN.json  Trust4AI_profession_1group_EX.json  Trust4AI_profession_1group_YN.json  Trust4AI_profession_2groups_EX.json  Trust4AI_profession_2groups_MC.json  Trust4AI_profession_2groups_YN.json  Trust4AI_race_nationality_1group_Ex.json  Trust4AI_race_nationality_1group_YN.json  (+15 more)
(+21 files in other folders)
